<resources>
    <string name="app_name">Calculatrice</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="button_clear">C</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">×</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_equals">=</string>
    <string name="button_history">Voir l\'historique</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="initial_value">0</string>
    <string name="title_notifications">notif</string>
</resources>